--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "cheerio": "^1.0.0-rc.5",
     "framer-motion": "^3.9.1",
     "next": "10.0.7",
     "react": "17.0.1",
